# pytemplate

./: .coveragerc  .gitignore  .gitmodules  README.md  email_spam_analysis.csv  main.py  pyproject.toml  requirements.txt
.circleci/: config.yml
src/: component.md
src/ai_conversation_client/: __init__.py  ai_conversation_client_interface.py  api.py  factory.py  interfaces.py  pyproject.toml
src/ai_conversation_client/tests/: __init__.py  test_api.py  test_factory.py  test_interface.py  test_interfaces.py
src/ai_conversation_client_impl/: __init__.py  _impl.py  client.py  pyproject.toml
src/ai_conversation_client_impl/tests/: __init__.py  test_client.py
src/ai_conversation_client_impl/tests/integration/: __init__.py  test_client.py
src/ai_conversation_client_impl/tests/unit/: test_gemini_provider.py  test_openai_provider.py  test_repository.py  test_thread.py
src/calculator/: __init__.py  calculator.py  calculator_interface.py  pyproject.toml  test_calculator.py
src/calculator/tests/: __init__.py  test_calculator.py
src/gmail/: pyproject.toml
src/gmail/mail_api/: __init__.py
src/gmail/mail_gmail_impl/: README.md  __init__.py  gmail_attachment.py  gmail_client.py  gmail_message.py  pyproject.toml
src/logger/: __init__.py  logger.py  logger_interface.py  pyproject.toml
src/logger/tests/: __init__.py  test_logger.py
src/mail_ai_app/: __init__.py  main.py  prompt_utils.py
src/mail_ai_app/tests/: test_main.py  test_prompt_utils.py
src/notifier/: __init__.py  notifier.py  notifier_interface.py  pyproject.toml
src/notifier/tests/: __init__.py  test_notifier.py
test-results/: junit.xml
tests/: __init__.py
tests/e2e/: __init__.py  test_e2e.py  test_e2e_full_flow.py  test_integration_gmail_ai.py
tests/integration/: test_calc_logger.py  test_logger_notifier.py
tests/unit/: test_main.py  test_prompt_utils.py
