[project]
name = "example_project"
version = "0.1.0"
description = "An example Python project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest==8.3.5",
    "ruff==0.9.9",
    "coverage", 
    "mypy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
ignore = ["D203", "D213", "TRY003", "EM101", "D101", "D404", "D413", "D205", "D210"]
select = ["D", "E", "F", "ANN", "UP", "TRY", "EM"]

[tool.mypy]
strict = true
ignore_missing_imports = true
