[project]
name = "python-template-repo"
version = "0.1.0"
description = "Python project template with testing, linting, and CI/CD"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"


dependencies = [
    "pytest==8.3.5",
    "ruff==0.9.9",
    "coverage", 
    "mypy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.15.0",
    "ruff>=0.1.5",
]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=xml --cov-report=term"


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
allow_untyped_decorators = true
strict = true

[tool.ruff.lint]
ignore = ["D203", "D213", "TRY003", "EM101", "D101", "D103", "D404", "D413", "D205", "D210", "D100", "D107", "ANN101"]
select = ["D", "E", "F", "ANN", "UP", "TRY", "EM", "W", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = ["src"]
