[project]
name = "python-template-repo"
version = "0.1.0"
description = "Python project template with testing, linting, and CI/CD"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"


dependencies = [
    "pytest==8.3.5",
    "ruff==0.9.9",
    "coverage", 
    "mypy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.1",
    "ruff>=0.1.5",
]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=xml --cov-report=term"
norecursedirs = [
    "external/gmail_client",
    "src/gmail",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
allow_untyped_decorators = true
strict = true
exclude = [
    "external/gmail_client/.*",
    "src/gmail/.*",
]

[[tool.mypy.overrides]]
module = "external.gmail_client.mail_gmail_impl.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "external.gmail_client.mail_api"
ignore_errors = true

[[tool.mypy.overrides]]
module = "gmail.mail_gmail_impl.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "gmail.mail_api"
ignore_errors = true

[tool.ruff]
exclude = [
    "external/gmail_client/**",
    "src/gmail/**",
]

[tool.ruff.lint]
ignore = ["D203", "D213", "TRY003", "EM101", "D101", "D103", "D404", "D413", "D205", "D210", "D100", "D107", "ANN101"]
select = ["D", "E", "F", "ANN", "UP", "TRY", "EM", "W", "I"]
exclude = [
    "external/gmail_client/**",
    "src/gmail/**",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "external/gmail_client/*",
    "src/gmail/*",
    "src/mail_ai_app/main.py",
]
