[project]
name = "ai_conversation_client"
version = "0.1.0"
description = "Python Interface for AI Conversation Client"
requires-python = ">=3.12"
dependencies = ["pytest", "pytest-cov", "python-dotenv"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]