[project]
name = "logger"
version = "0.1.0"
description = "A simple logger component"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true

[tool.ruff.lint]
ignore = ["D203", "D213", "TRY003", "EM101", "D101", "D404", "D413", "D205", "D210", "D212", "D104"] 
select = ["D", "E", "F", "ANN", "UP", "TRY", "EM"]
exclude = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
